--- a/index.html
+++ b/index.html
@@ -2,9 +2,12 @@
 <html>
 <head>
     <title>MySecureBank</title>
+    <link href="lib/bootstrap-3.3.6/css/bootstrap.min.css" rel="stylesheet"/>
 </head>
 <body>
 <div id="body"></div>
 </body>
-<script src="app/src/index.js"></script>
+<script src="build/bundle.js"></script>
+<script src="lib/jquery-1.12.1.min.js"></script>
+<script src="lib/bootstrap-3.3.6/js/bootstrap.min.js"></script>
 </html>
